update: reservation response 시 feedback 을 포함시키도록함
