# src/models/reservation/dto/response/reservationGetResponse.dto.ts
@@ -1,4 +1,6 @@
 import { IReservationResponse } from '../../../../common/interfaces/api/reservation/reservationResponse.interface';
+import { IMentorFeedbackResponse } from '../../../../common/interfaces/api/mentorFeedback/mentorFeedbackResponse.interface';
+import { IMenteeFeedbackResponse } from '../../../../common/interfaces/api/menteeFeedback/menteeFeedbackResponse.interface';
 
 export class ReservationGetResponseDto implements IReservationResponse {
   id: number;
@@ -11,6 +13,8 @@ export class ReservationGetResponseDto implements IReservationResponse {
     id: number;
     name: string;
   }[];
+  mentorFeedback: IMentorFeedbackResponse;
+  menteeFeedback: IMenteeFeedbackResponse;
   createdAt: Date;
   updatedAt: Date;
 }
